add Travis CI badge

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,8 @@
 ﻿= AsciiDoc Presentation Template
 Vasiliy Polyakov <invasy.v@gmail.com>
 
+image:https://travis-ci.com/invasy/presentation-asciidoc.svg?branch=master["Build Status", link="https://travis-ci.com/invasy/presentation-asciidoc"]
+
 == Links
 * https://asciidoctor.org/[AsciiDoctor] — A fast text processor & publishing toolchain for converting AsciiDoc to HTML5, DocBook & more
 * https://revealjs.com/[Reveal.js] — The HTML Presentation Framework
